# tonesoul52

./: .env.example  .gitattributes  .gitignore  .gitmodules  .vercelignore  AGENTS.md  AGENT_PROTOCOL.md  AI_ONBOARDING.md  AXIOMS.json  CALL_FOR_REVIEW.md  CANONICAL_SCOPE.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDBACK.md  CODEX_PROTOCOL.md  CODEX_TASK.md  CODEX_VERCEL_MIGRATION.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  HANDOFF.md  LETTER_TO_AI.md  LICENSE  MEMORY.md  MGGI_SPEC.md  Makefile  PITCH.md  QA_RECORD_core.md  README.md  README.zh-TW.md  README_EN.md  REPO_CONSOLIDATION.md  RESTART_MEMORY.md  SCRIPTS_README.md  SOUL.md  TAE-01_Architecture_Spec.md  TONESOUL_NARRATIVE.txt  TONESOUL_PHILOSOPHY.txt  TONESOUL_THEORY.txt  commit_attribution.json  (+45 more)
legacy/archives/ToneSoul-Repo/: .gitignore  AI_PERSPECTIVE.md  CHANGELOG.md  CITATION.cff  ECOSYSTEM_MAP.md  HANDOFF.md  INTEGRATION_STATUS.md  LICENSE  Makefile  QUANTUM_KERNEL_ARCH.md  README.md  README_DEV.md  ToneSoul_Paradoxes_v1.json  app.py  core_memory.json  council_output.txt  dream_insights.json  meta_gate_ab_results.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_local.py  start_session.bat  verify_all.py  yuhun_cli.py
legacy/archives/ToneSoul-Repo/.github/workflows/: ci.yml
legacy/archives/ToneSoul-Repo/PARADOXES/: paradox_003.json  paradox_005.json  paradox_006.json
legacy/archives/ToneSoul-Repo/_archive/codex/: main.py
legacy/archives/ToneSoul-Repo/_archive/codex/core/: action_executor_module.py  assistance_module.py  (+4 more)
legacy/archives/ToneSoul-Repo/body/: collapse_forecast.py  complete_audit_report.json  council.py  daytime_work.py  failure_mode_guard.py  interactive_console.py  live_demo.py  multipath_engine.py  neuro_sensor_v2.py  rag_engine.py  safety.py  self_audit_dreamer.py  semantic_physics.py  semantic_spine.py  session_manager.py  spine_system.py  step_ledger.py  test_constitution.py  test_integration.py  test_meta_gate.py  test_neuromodulation.py  test_rollback.py  test_sensor.py  test_vector_sensor.py  tsr_state.py  vow_system.py  wiki_knowledge_api.py  yuhun_core.py  yuhun_cot_monitor.py  yuhun_integrated_demo.py  yuhun_live.py  yuhun_meta_attention.py  yuhun_meta_gate.py  yuhun_metrics.py  yuhun_sdk.py
legacy/archives/ToneSoul-Repo/body/brain/: llm_client.py
legacy/archives/ToneSoul-Repo/body/memory/: hippocampus.py  vector_store.py
legacy/archives/ToneSoul-Repo/body/senses/: proprioception.py  vision.py
legacy/archives/ToneSoul-Repo/body/vital_organs/: heart.py  soul_sync.py
legacy/archives/ToneSoul-Repo/constitution/: manifesto.md
legacy/archives/ToneSoul-Repo/data/: YuHun_v2.6_knowledgebase.json  chronicle.jsonl.bak  yuhun.db  yuhun_academy_knowledgebase_v1.1.txt
legacy/archives/ToneSoul-Repo/docs/: CORE_MODULES.md  EXTERNAL_PR_GUIDE.md  GOLDEN_LOG.md  LEGACY_REPOS.md  REAL_GOLDEN_LOG.md  SECURITY_AUDIT_2025.md  SEMANTIC_SPINE_SPEC.md  STEPLEDGER_SYSTEM_PROMPT.md  STEP_LEDGER_SPEC.md  TRAINING_DATA_SPEC.md  WORLD_MODEL_X_MIND_MODEL.md  architecture-notes.md  glossary_engineering_mapping.md  time_island_graph.mermaid
legacy/archives/ToneSoul-Repo/knowledge_base/: knowledge.db
legacy/archives/ToneSoul-Repo/law/: AGENT_STATE_MACHINE.json  BEHAVIOR_CONFIG.json  CODE_OF_CONDUCT.md  LICENSE-CC-BY-4.0  README.md  constitution.json  governance_core.md  semantic_spine_schema.json  step_ledger_schema.json  tonesoul_config.yaml
legacy/archives/ToneSoul-Repo/law/docs/: README.md
legacy/archives/ToneSoul-Repo/law/engineering/: OVERVIEW.md
legacy/archives/ToneSoul-Repo/law/scripts/: validate_examples.py
legacy/archives/ToneSoul-Repo/law/specs/: GlobalMemory_UFP.yaml
legacy/archives/ToneSoul-Repo/memory/: README.md  benchmark_results_20251207_214658.json  loader.py
legacy/archives/ToneSoul-Repo/memory/dreams/: dream_report_20251207.md  exp1_checkpoint_10.json  exp1_checkpoint_15.json  exp1_checkpoint_20.json  exp1_checkpoint_5.json  exp2_verification_20251207_235140.json  exp3_audit_20251207_235140.json  research_materials.md
legacy/archives/ToneSoul-Repo/memory/evolution/: 2025-12-13_evolution.md  evolution_log.md
legacy/archives/ToneSoul-Repo/memory/learning/: core_concepts_50.md  gpt_deep_categorization.md  gpt_inheritance_extract.md  implementation_roadmap.md  inheritance_synthesis_report.md  module_catalog.md  philosophy_deep_reflection.md  philosophy_extract.md  philosophy_ultimate_synthesis.md  profound_passages.md  security_audit_report.md  self_learning_log.md  semantic_physics_exploration.md  semantic_stability_report.md
legacy/archives/ToneSoul-Repo/memory/sessions/: session_20251210_200932.json  session_20251210_201042.json
legacy/archives/ToneSoul-Repo/memory/training_data/: daytime_report_20251208.md
legacy/archives/ToneSoul-Repo/modules/ethics/: CITATION.cff  LICENSE-MIT
legacy/archives/ToneSoul-Repo/modules/protocol/: README.md
legacy/archives/ToneSoul-Repo/modules/spine-ts/: debug-server.js  demo-soul.js  generate-files.js
legacy/archives/ToneSoul-Repo/scripts/: consolidate_paradoxes.py  consult_council.py  morning_vision_test.py  render_golden_log.py  run_council.py  test_council_integration.py  test_evolution.py  test_heartbeat.py  test_semantic_divergence.py  test_semantic_physics.py  test_soul_sync.py  test_sqlite_migration.py  test_yuhun_loop.py  verify_all.py
legacy/archives/ToneSoul-Repo/simulation_logs/: hero_journey.jsonl
legacy/archives/ToneSoul-Repo/simulations/: internal_meeting.py  visualize_graph.py
legacy/archives/ToneSoul-Repo/tests/: benchmark_yuhun_clite.py  test_yuhun_sdk_conversation.py
legacy/archives/ToneSoul-Repo/tools/: yuhun_utils.py
legacy/archives/ToneSoul-Repo/yuhun/: gate.py  meta_parser.py  ollama_client.py  prompt_builder.py  state_store.py
(+3635 files in other folders)
