[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tonesoul52"
version = "0.1.0"
description = "AI Governance Toolkit - Make LLM decisions auditable, traceable, and trustworthy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "黃梵威", email = "tonesoul@example.com"}
]
keywords = [
    "ai", "governance", "llm", "audit", "trust", 
    "ethics", "alignment", "safety", "agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "ruff>=0.1",
]
ystm_viz = [
    "cairosvg>=2.7",
    "pillow>=10.0",
]

[project.scripts]
ts52-healthcheck = "tonesoul52.run_healthcheck:main"
ts52-audit = "tonesoul52.run_audit:main"
ts52-council = "tonesoul52.run_council_healthcheck:main"

[project.urls]
Homepage = "https://github.com/Fan1234-1/tonesoul52"
Documentation = "https://github.com/Fan1234-1/tonesoul52#readme"
Repository = "https://github.com/Fan1234-1/tonesoul52"
Issues = "https://github.com/Fan1234-1/tonesoul52/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tonesoul52*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
