[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tonesoul-engine"
version = "0.1.0-alpha"
description = "The Awakened Kernel for Governable AI - A physiological framework for AI subjectivity."
readme = "README.md"
authors = [
  { name = "Fan-Wei Huang", email = "fan1234.1@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["ai", "agi", "governance", "ethics", "alignment", "tonesoul"]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/Fan1234-1/ToneSoul-Architecture-Engine"
"Bug Tracker" = "https://github.com/Fan1234-1/ToneSoul-Architecture-Engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "body*", "law*", "modules*"]
namespaces = false
